# ca-generalized

./: Cargo.toml  README.md  index.html
src/: Canvas.rs  canvas.rs  life.rs  main.rs  settings.rs  states.rs
